
* Added support for datetime_bounds variable.

* Fixed issue in =& operation (it returned true if any of the bits were 1
  instead of all bits).

* Updates to product ingestions:
  - GEOMS: renamed all site_name variables to location_name
  - GEOMS FTIR H2CO: fixed issue in determining unit for H2O data (that would
    fail the ingestion)
  - S5P L2 CO: added co=corrected ingestion option

1.12 2020-10-29
~~~~~~~~~~~~~~~

* The csv output of 'harpdump --dataset' can now be used as content of a .pth
  file. This improves the performance of harpcollocate/harpmerge/etc. as they
  no longer need to open and extract metadata from files themselves anymore.

* harpcollocate now stores differences as signed values in collocation result
  file (instead of absolute differences).

* Added harp_dataset_prefilter(). This function is now also called within
  harpmerge and harpcollocate to pre-filter the input dataset(s) for datetime
  and collocate left/right filters that are at the start of the operations
  string.

* Added format and history fields to harp_product_metadata.

* Added harp.import_product_metadata() to Python interface.

* harp_dataset_add_product() now ignores files/directories starting with '.'.

* Added uncertainty propagation to bin() and bin_spatial() operations
  (using uncorrelated assumption for bin() and correlated for bin_spatial()).

* Added global option to determine whether uncertainty propagation should
  use a correlated or uncorrelated approach. Currently only used for the bin()
  operation.

* Added global option to create a collocation_datetime variable when performing
  a collocate_left() or collocate_right() operation.

* Added wildcard pattern matching ('*'/'?') to keep() and exclude() operations.

* Added derivation to retrieve angstrom exponent from aerosol optical depth.

* Added derivation to retrieve tropospheric/stratospheric column avk from
  total column avk and tropopause altitude.
