@@ -539,9 +539,12 @@
 <td><p><em>path</em></p></td>
 <td><p><strong>/nad_ir2_n2o[]/flag_vcd_flags</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>cloud_fraction</strong></p></td>
+<tr class="row-odd"><td rowspan="2"><p><strong>cloud_fraction</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/clouds_aerosol[]/cl_frac</strong></p></td>
+</tr>
+<tr class="row-even"><td><p><em>description</em></p></td>
+<td><p>in case of co-adding, the average of all values within the integration time is taken</p></td>
 </tr>
 </tbody>
 </table>
